--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
+    "merge2": "^0.3.6",
     "run-sequence": "^1.1.5",
     "tsd": "^0.6.5"
   },
