--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "typescript": {
+    "definition": "dist/ts/terminal-quiz.d.ts"
+  }
 }
