--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-jasmine": "^2.2.1",
+    "gulp-karma": "0.0.5",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
+    "jasmine-core": "^2.4.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-spec-reporter": "0.0.23",
+    "karma-typescript-preprocessor": "0.0.21",
     "merge2": "^0.3.6",
+    "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5",
     "tsd": "^0.6.5"
   },
