--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-expect-file": "0.0.7",
     "gulp-jasmine": "^2.2.1",
     "gulp-karma": "0.0.5",
     "gulp-load-plugins": "^1.2.0",
