--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   "homepage": "www.creativity.pt/en",
   "dependencies": {
     "jquery.terminal": "0.9.2",
-    "jasmine-core": "jasmine#~2.4.1"
+    "jasmine-core": "jasmine#~2.4.1",
+    "jasmine-jquery": "~2.1.1"
   },
   "ignore": [
     "**/.*",
