--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-expect-file": "0.0.7",
     "gulp-jasmine": "^2.2.1",
-    "gulp-karma": "0.0.5",
     "gulp-load-plugins": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tsc": "^1.1.5",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
-    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
     "karma-jasmine": "^0.3.6",
+    "jasmine-core": "^2.4.1",
     "karma-phantomjs-launcher": "^0.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.23",
-    "karma-typescript-preprocessor": "0.0.21",
+    "karma-typescript-preprocessor2": "^1.1.1",
     "merge2": "^0.3.6",
     "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5",
