--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gulp-tsc": "^1.1.5",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.6",
     "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.23",
