--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,19 @@
         "typings/tsd.d.ts"
     ],
     "files": [
+        "src/ts/lib/Autocomplete.ts",
         "src/ts/lib/ChoiceQuestion.ts",
         "src/ts/lib/CombinationQuestion.ts",
+        "src/ts/lib/IQuizOptions.ts",
         "src/ts/lib/ListQuestion.ts",
         "src/ts/lib/Question.ts",
         "src/ts/lib/Quiz.ts",
         "src/ts/lib/TextBuilder.ts",
         "src/ts/lib/TextQuestion.ts",
+        "src/ts/tests/Question.tests.ts",
         "src/ts/tests/Quiz.tests.ts",
         "src/ts/tests/SmokeTests.ts",
+        "src/ts/tests/Utils.ts",
         "typings/tsd.d.ts"
     ],
     "atom": {
