--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "src/ts/lib/ListQuestion.ts",
         "src/ts/lib/Question.ts",
         "src/ts/lib/Quiz.ts",
+        "src/ts/lib/QuizAudioManager.ts",
         "src/ts/lib/TextBuilder.ts",
         "src/ts/lib/TextQuestion.ts",
         "src/ts/tests/Question.tests.ts",
