--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "typings/tsd.d.ts"
     ],
     "files": [
+        "src/ts/lib/AudioManager.ts",
         "src/ts/lib/Autocomplete.ts",
         "src/ts/lib/ChoiceQuestion.ts",
         "src/ts/lib/CombinationQuestion.ts",
@@ -20,7 +21,6 @@
         "src/ts/lib/ListQuestion.ts",
         "src/ts/lib/Question.ts",
         "src/ts/lib/Quiz.ts",
-        "src/ts/lib/QuizAudioManager.ts",
         "src/ts/lib/TextBuilder.ts",
         "src/ts/lib/TextQuestion.ts",
         "src/ts/tests/Question.tests.ts",
