Added: Declaration merge to support easier typed ask methods for each question type. Added: JQuery plugin implementation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
         "src/ts/lib/Answer.ts",
         "src/ts/lib/ChoiceQuestion.ts",
         "src/ts/lib/CombinationQuestion.ts",
+        "src/ts/lib/IQuiz.ts",
         "src/ts/lib/IQuizOptions.ts",
+        "src/ts/lib/JQuery.ts",
         "src/ts/lib/ListQuestion.ts",
         "src/ts/lib/Question.ts",
         "src/ts/lib/QuestionProcessor.ts",
