Fixed: jQuery plugin bugs. Improved: ChoiceQuestion detail generation allowing more customization with css. Added: ChoiceQuestion tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "src/ts/lib/CombinationQuestion.ts",
         "src/ts/lib/IQuiz.ts",
         "src/ts/lib/IQuizOptions.ts",
-        "src/ts/lib/JQuery.ts",
+        "src/ts/lib/jQueryPlugin.ts",
         "src/ts/lib/ListQuestion.ts",
         "src/ts/lib/Question.ts",
         "src/ts/lib/QuestionProcessor.ts",
@@ -26,6 +26,8 @@
         "src/ts/lib/QuizAudioManager.ts",
         "src/ts/lib/QuizSounds.ts",
         "src/ts/lib/TextQuestion.ts",
+        "src/ts/tests/ChoiceQuestion.tests.ts",
+        "src/ts/tests/jQueryPlugin.tests.ts",
         "src/ts/tests/Question.tests.ts",
         "src/ts/tests/Quiz.tests.ts",
         "src/ts/tests/SmokeTests.ts",
