Added random typing sounds.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "^2.2.0",
     "gulp": "*",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-build": "^0.5.3",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-expect-file": "0.0.7",
@@ -21,16 +22,20 @@
     "gulp-typescript": "^2.12.0",
     "gulp-uglify": "^1.5.1",
     "jasmine-core": "^2.4.1",
+    "jasmine-jquery": "^2.1.1",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.3",
+    "karma-qunit": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.23",
     "karma-typescript-preprocessor2": "^1.1.1",
     "merge2": "^0.3.6",
     "phantomjs": "^1.9.19",
+    "qunitjs": "^1.23.1",
     "run-sequence": "^1.1.5",
     "tsd": "^0.6.5",
     "wiredep": "^3.0.0"
